# paper_plane_x_cli

./: .gitignore  README.md  README.zh.md  justfile  pyproject.toml
skills/mineru-pdf-to-markdown/: SKILL.md
skills/paper-plane-x-researcher/: SKILL.md
skills/paper-plane-x-researcher/references/: tool-guide.md
skills/ppx-ai-hitl-research-orchestrator/: SKILL.md
skills/ppx-evidence-locking/: SKILL.md
skills/ppx-literature-intelligence/: SKILL.md
skills/ppx-mineru-pdf-to-markdown/: SKILL.md
skills/ppx-parallel-research-delegation/: SKILL.md
skills/ppx-pdf-to-markdown/: SKILL.md
skills/ppx-research-audit-iteration/: SKILL.md
skills/ppx-research-planning/: SKILL.md
skills/ppx-research-writing/: SKILL.md
skills/ppx-researcher/: SKILL.md
skills/ppx-researcher/references/: tool-guide.md
src/paper_plane_x_cli/: __init__.py  cli.py  mineru.py
src/paper_plane_x_cli/cli/: __init__.py  context.py  files.py  librarian.py  mineru.py  paper.py  paper_note.py  pdf.py  project.py  skills.py  utils.py
tests/: test_cli.py  test_mineru.py  test_paper.py  test_pdf.py
