[project]
name = "paper-plane-x-cli"
version = "0.1.0"
description = "HTTP CLI and external-agent skill for Paper Plane X"
readme = "README.md"
authors = [{ name = "windlx", email = "1418043337@qq.com" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[project.scripts]
ppx = "paper_plane_x_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_plane_x_cli"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "skills"

[tool.hatch.build.targets.sdist]
include = [
    "src/paper_plane_x_cli",
    "skills",
    "README.md",
    "pyproject.toml",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
